--- a/bibliotheque-front/src/app/home/home.component.html
+++ b/bibliotheque-front/src/app/home/home.component.html
@@ -13,64 +13,30 @@
   </div>
 </div>
 
-<!-- 2eme partie : évènements -->
-<div class="container my-3">
-  <h2>Prochains évènements</h2>
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+<div class="container my-5">
+  <!-- 2eme partie : évènements -->
+  <div class="container">
+    <h2 class="text-sans"><b>Prochains évènements</b></h2>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-    <!-- Carte TODO customiser !-->
-    <div class="col" *ngFor="let i of [].constructor(3)">
-      <div class="card shadow-sm">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-          role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-            dy=".3em">Thumbnail</text>
-        </svg>
-        <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-            </div>
-            <small class="text-muted">9 mins</small>
-          </div>
-        </div>
+      <div class="col" *ngFor="let i of [].constructor(3)">
+        <app-carte-evenement [tag]="'TAG'" [title]="'TITRE'" [content]="'CONTENT'" [date]="'DATE'"
+          [thumbnailUrl]="'../../../assets/img/news/1.png'"></app-carte-evenement>
       </div>
-    </div>
 
+    </div>
   </div>
-</div>
 
-<!-- 3eme partie : collections -->
-<div class="container my-3">
-  <h2>Nos collections :</h2>
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+  <!-- 3eme partie : collections -->
+  <div class="container">
+    <h2 class="text-sans"><b>Nos collections :</b></h2>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
 
-    <!-- Carte TODO Customiser !-->
-    <div class="col" *ngFor="let i of [].constructor(3)">
-      <div class="card shadow-sm">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-          role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-            dy=".3em">Thumbnail</text>
-        </svg>
-        <div class="card-body">
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-            additional content. This content is a little bit longer.</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-            </div>
-            <small class="text-muted">9 mins</small>
-          </div>
-        </div>
+      <!-- Carte TODO Customiser !-->
+      <div class="col" *ngFor="let i of [].constructor(4)">
+        <app-carte-collection></app-carte-collection>
       </div>
-    </div>
 
+    </div>
   </div>
 </div>
