--- a/bibliotheque-front/src/styles.scss
+++ b/bibliotheque-front/src/styles.scss
@@ -2,7 +2,7 @@
 
 /* Polices d'écritures */
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;700&display=swap');
 
 /* Variables globales */
 :root {
@@ -14,10 +14,9 @@ body {
 	font-family:"Libre Baskerville", serif !important;
 }
 
-/*.display-1, .display-2, .display-3, .display-4, .display-5, .display-6{
-	font-family:"Oswald", sans-serif;
-	font-weight:bold;
-}*/
+.text-sans {
+	font-family:"Signika Negative", sans-serif;
+}
 
 .blockquote {
 	/* Citation */
