--- a/bibliotheque-front/src/app/page-admin/page-admin.component.html
+++ b/bibliotheque-front/src/app/page-admin/page-admin.component.html
@@ -1,5 +1,11 @@
 <div class="d-flex flex-fill align-items-center justify-content-center h-100">
-    <div>
+    <div class="mt-3">
         <img src="assets/img/admin.jpg" alt="you have no power here meme">
     </div>
+</div>
+
+<hr>
+
+<div>
+    <app-gestion-comptes></app-gestion-comptes>
 </div>
