--- a/bibliotheque-front/src/app/page-admin/gestion-comptes/gestion-comptes.component.html
+++ b/bibliotheque-front/src/app/page-admin/gestion-comptes/gestion-comptes.component.html
@@ -64,6 +64,11 @@
             </div>
 
             <div class="form-group mb-3">
+                <label for="password" class="form-label">Password:</label> 
+                <input class="form-control" type="password" id="password"  [(ngModel)]="formGestionComptes.password" />
+            </div>
+
+            <div class="form-group mb-3">
                 <label for="type-select" class="form-label">Compte:</label>
                 <select class="form-select" placeholder="--Choisir le type de compte--" id="type-select" [(ngModel)]="formGestionComptes.type">
                     <option value="" selected>--Choisir le type de compte--</option>
